[gd_scene load_steps=27 format=3 uid="uid://buibutlg2i1hw"]

[ext_resource type="Script" path="res://movement.gd" id="1_pod02"]
[ext_resource type="PackedScene" uid="uid://duxm0xto21i5i" path="res://title_screen.tscn" id="2_2yv25"]
[ext_resource type="FontFile" uid="uid://b8irgeaahogwp" path="res://alagard.ttf" id="2_v4vsr"]
[ext_resource type="Texture2D" uid="uid://d2ri5fgaglp47" path="res://gothicenter.png" id="4_l21eo"]
[ext_resource type="Texture2D" uid="uid://blfwglcb05ifc" path="res://Screenshot 2025-04-04 at 9.14.34 PM.png" id="5_27mj2"]
[ext_resource type="Texture2D" uid="uid://cn4u8yt8q3b06" path="res://Screenshot 2025-04-04 at 9.15.10 PM.png" id="6_c40np"]
[ext_resource type="Texture2D" uid="uid://b7nkcbwl5mjyx" path="res://Screenshot 2025-04-04 at 9.16.30 PM.png" id="7_c8fpb"]
[ext_resource type="Texture2D" uid="uid://dbn6rfodlq8ji" path="res://Screenshot 2025-04-04 at 9.15.29 PM.png" id="8_58ott"]
[ext_resource type="Texture2D" uid="uid://ddfmlqqboxb8o" path="res://Screenshot 2025-04-04 at 9.14.55 PM.png" id="9_l2v3e"]

[sub_resource type="Animation" id="Animation_7fj8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/fade_rect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:current")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/title:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/title:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gylmi"]
resource_name = "disorient_zoom"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [75.0, 30.0]
}

[sub_resource type="Animation" id="Animation_ayddr"]
resource_name = "fade"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/fade_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_2ogfx"]
resource_name = "return"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/fade_rect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5pqrj"]
resource_name = "start"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/title:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v12n4"]
_data = {
"RESET": SubResource("Animation_7fj8x"),
"disorient_zoom": SubResource("Animation_gylmi"),
"fade": SubResource("Animation_ayddr"),
"return": SubResource("Animation_2ogfx"),
"start": SubResource("Animation_5pqrj")
}

[sub_resource type="Animation" id="Animation_tvwo1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_spsay"]
resource_name = "popup"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.03333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.36667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1a6ec"]
_data = {
"RESET": SubResource("Animation_tvwo1"),
"popup": SubResource("Animation_spsay")
}

[sub_resource type="Animation" id="Animation_lfcbj"]
resource_name = "float"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-303, 851), Vector2(-303, 840), Vector2(-303, 851)]
}

[sub_resource type="Animation" id="Animation_jrb55"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-303, 851)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wo53f"]
_data = {
"RESET": SubResource("Animation_jrb55"),
"float": SubResource("Animation_lfcbj")
}

[sub_resource type="PlaneMesh" id="PlaneMesh_uiudp"]
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wsarb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cfdpx"]
radius = 0.743337
height = 3.18212

[sub_resource type="CapsuleMesh" id="CapsuleMesh_44jyg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fc1kd"]
albedo_color = Color(0.709649, 0.000687885, 0.766753, 1)

[node name="winner" type="Node3D"]

[node name="character" type="CharacterBody3D" parent="."]
transform = Transform3D(1.4, 6.98131e-05, 0, -4.88692e-05, 2, 0, 0, 0, 1.4, 0, 0, 0)
script = ExtResource("1_pod02")
metadata/entropy_effect = &"null;)"
metadata/wield_slot = 1

[node name="Neck" type="Node3D" parent="character"]
transform = Transform3D(1, 1.09139e-11, 0, -3.63798e-12, 1, 0, 0, 0, 1, -1.45461e-05, 0.416714, 0)

[node name="Camera3D" type="Camera3D" parent="character/Neck"]
transform = Transform3D(0.714286, -1.81899e-12, 0, 3.63798e-12, 0.625, 0, 0, 0, 0.714286, -5.45697e-12, 0.736067, 0.455217)

[node name="VisualFX" type="AnimationPlayer" parent="character/Neck/Camera3D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_v12n4")
}

[node name="spud" type="AnimationPlayer" parent="character/Neck/Camera3D"]
root_node = NodePath("../CanvasLayer/glitch")
libraries = {
"": SubResource("AnimationLibrary_1a6ec")
}

[node name="RayCast3D" type="RayCast3D" parent="character/Neck/Camera3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -0.97414)
target_position = Vector3(3, 0, 0)
collision_mask = 3

[node name="walkray" type="RayCast3D" parent="character/Neck/Camera3D"]
transform = Transform3D(1.19253e-08, 1, 0, -1, 1.19253e-08, 0, 0, 0, 1, 3.58139e-05, -1.02599, -0.649815)
target_position = Vector3(3, 0, 0)
collision_mask = 3

[node name="CanvasLayer" type="CanvasLayer" parent="character/Neck/Camera3D"]

[node name="Label3D" type="Label" parent="character/Neck/Camera3D/CanvasLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -24.5
offset_right = 15.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70

[node name="fade_rect" type="ColorRect" parent="character/Neck/Camera3D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="dialoguebox" type="Sprite2D" parent="character/Neck/Camera3D/CanvasLayer"]
position = Vector2(1146, 1129.86)
scale = Vector2(1.19383, 0.751873)

[node name="speaker" type="Label" parent="character/Neck/Camera3D/CanvasLayer/dialoguebox"]
offset_left = -762.0
offset_top = -298.0
offset_right = -420.0
offset_bottom = -202.0
theme_override_colors/font_color = Color(1, 1, 1, 0.509804)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.0728426, 0.0728426, 0.0728426, 1)
theme_override_font_sizes/font_size = 65
text = "
"
horizontal_alignment = 1

[node name="dialogue" type="Label" parent="character/Neck/Camera3D/CanvasLayer/dialoguebox"]
offset_left = -677.0
offset_top = -105.0
offset_right = 678.0
offset_bottom = 216.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 85

[node name="pause menu" type="Control" parent="character/Neck/Camera3D/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title" type="Control" parent="character/Neck/Camera3D/CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 9.0
offset_right = 20.0
offset_bottom = 49.0
grow_horizontal = 2

[node name="Label" type="Label" parent="character/Neck/Camera3D/CanvasLayer/title"]
offset_left = -320.0
offset_top = 845.0
offset_right = -175.0
offset_bottom = 868.0
scale = Vector2(5, 5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_v4vsr")
theme_override_font_sizes/font_size = 16
text = " S o f i a   V i o l e t 
"

[node name="TitleScreen" parent="character/Neck/Camera3D/CanvasLayer/title" instance=ExtResource("2_2yv25")]
position = Vector2(-1072, 46)
scale = Vector2(2.1, 2.31)
skew = 0.0750492

[node name="EnterButton" type="Button" parent="character/Neck/Camera3D/CanvasLayer/title"]
layout_mode = 0
offset_left = -244.0
offset_top = 1121.0
offset_right = 64.0
offset_bottom = 1204.0
scale = Vector2(2.1, 2)
text = "
"
icon = ExtResource("4_l21eo")
flat = true

[node name="tutorial" type="Control" parent="character/Neck/Camera3D/CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 9.0
offset_right = 20.0
offset_bottom = 49.0
grow_horizontal = 2

[node name="Label" type="Label" parent="character/Neck/Camera3D/CanvasLayer/tutorial"]
offset_left = -303.0
offset_top = 846.331
offset_right = -125.0
offset_bottom = 879.331
scale = Vector2(3, 3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.495509, 0.495509, 0.495509, 1)
theme_override_colors/font_outline_color = Color(0.491583, 0.491583, 0.491583, 1)
theme_override_fonts/font = ExtResource("2_v4vsr")
theme_override_font_sizes/font_size = 16
text = "click anywhere to begin

"

[node name="AnimationPlayer" type="AnimationPlayer" parent="character/Neck/Camera3D/CanvasLayer/tutorial/Label"]
libraries = {
"": SubResource("AnimationLibrary_wo53f")
}
autoplay = "float"

[node name="glitch" type="Control" parent="character/Neck/Camera3D/CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1688.0
offset_top = -159.0
offset_right = -1648.0
offset_bottom = -119.0
grow_horizontal = 2
scale = Vector2(2.6, 2.6)

[node name="Sprite2D" type="Sprite2D" parent="character/Neck/Camera3D/CanvasLayer/glitch"]
visible = false
position = Vector2(325, 475.357)
scale = Vector2(0.634009, 0.634009)
texture = ExtResource("5_27mj2")

[node name="Sprite2D2" type="Sprite2D" parent="character/Neck/Camera3D/CanvasLayer/glitch"]
visible = false
position = Vector2(465.714, 280)
scale = Vector2(0.374333, 0.374333)
texture = ExtResource("6_c40np")

[node name="Sprite2D3" type="Sprite2D" parent="character/Neck/Camera3D/CanvasLayer/glitch"]
visible = false
position = Vector2(865, 488.214)
scale = Vector2(0.374333, 0.374333)
texture = ExtResource("7_c8fpb")

[node name="Sprite2D4" type="Sprite2D" parent="character/Neck/Camera3D/CanvasLayer/glitch"]
visible = false
position = Vector2(717.5, 387.5)
scale = Vector2(0.374333, 0.374333)
texture = ExtResource("8_58ott")

[node name="Sprite2D5" type="Sprite2D" parent="character/Neck/Camera3D/CanvasLayer/glitch"]
visible = false
position = Vector2(834.643, 283.214)
scale = Vector2(0.346741, 0.346741)
texture = ExtResource("9_l2v3e")

[node name="ColorRect" type="ColorRect" parent="character/Neck/Camera3D/CanvasLayer"]
color = Color(0, 0, 0, 1)

[node name="fuzz" type="MeshInstance3D" parent="character/Neck/Camera3D"]
transform = Transform3D(1.4, 0, 0, 0, -6.11959e-08, -1.4, 0, 1.4, -6.11959e-08, 0, 0, -0.552236)
visible = false
mesh = SubResource("PlaneMesh_uiudp")
surface_material_override/0 = SubResource("ShaderMaterial_wsarb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="character"]
transform = Transform3D(0.7, -1.0914e-11, 0, 1.0914e-11, 0.7, 0, 0, 0, 0.7, -4.8835e-06, 0.0979314, 0)
shape = SubResource("CapsuleShape3D_cfdpx")

[node name="devmarker" type="MeshInstance3D" parent="character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00374496, 0)
mesh = SubResource("CapsuleMesh_44jyg")
surface_material_override/0 = SubResource("StandardMaterial3D_fc1kd")

[node name="localsound" type="AudioStreamPlayer3D" parent="character"]
transform = Transform3D(0.714286, -3.63798e-12, 0, 3.63798e-12, 0.5, 0, 0, 0, 0.714286, -2.78824e-05, 0.55914, 0)
volume_db = -33.779

[connection signal="pressed" from="character/Neck/Camera3D/CanvasLayer/title/EnterButton" to="character" method="_on_enter_button_pressed"]
